# bogobble

./: Cargo.toml  readme.md
src/: charbool.rs  combi.rs  common.rs  convert.rs  err.rs  iter.rs  lib.rs  macros.rs  parser.rs  reader.rs  repeater.rs  select.rs  strings.rs  strung.rs  traits.rs  tuple.rs
src/partial/: charbool.rs  mark_list.rs  mod.rs  p_repeat.rs  ranger.rs
