[package]
name = "bogobble"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
description = "A Combinator bases string parser that allows borrowed results"
keywords = ["shell","parser","terminal","grammar"]
repository = "https://github.com/storyfeet/bogobble"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#err_tools = {path="../../mlibs/err_tools/"}


